used query selectors to get all the data i needed

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
     <h1>Tip Calculator</h1>
+    <form>
     <h2>What is the total price of the meal?</h2>
     <input type="text" id= "price">
     <h2>What is the tip percentage?</h2>
     <input type="text" id="tip">
+    <br>
+    <br>
+        <button id="submit">Submit</button>
+    </form>
     <h2>Tip Amount: <span id="tipAMT"></span></h2>
     <h2>Total with Tip: <span id= "total"></span></h2>
     <script src="script.js"></script>
