tip calculator is fully functioning took about 30 min total i was forgetting basic js uses = for innerHTML

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <br>
         <button id="submit">Submit</button>
     </form>
-    <h2>Tip Amount: <span id="tipAMT"></span></h2>
-    <h2>Total with Tip: <span id= "total"></span></h2>
+    <h2>Tip Amount: $<span id="tipAMT"></span></h2>
+    <h2>Total with Tip: $<span id= "total"></span></h2>
     <script src="script.js"></script>
 </body>
 </html>
